 * Add multithread support.
 * Move functions info into library instead text file.
 * Use own tokenizer.
 * Add program optimization.
 * Make callable EVAL.

Now
 * Remove GTKmm dependencies.
 * Use GNU Guile for scripting and config.
 * Move VM into library.
 * Catch Scheme exceptions.
 * Load options from Scheme file.
 * Remove GP test and load other options.

Version 0.0.0.10 2011-01-02
 * Remove Ruby support.
 * Dump full population at the end.
 * Make ST_ANSWER_QUALITY, ST_MOVE_DIFF, ST_DIR_DIFF as aggregative.
 * Fix overflow in aggregation.
 * Append ST_DIRS parameter.
 * Append ST_AREA parameter.
 * Print world map.

Version 0.0.0.9 2010-12-30
 * Remove check for equality in mutation and crossover because it can break good ADF.
 * Fix DIR_DIFF status calculating.
 * Fix evalation at end of circles.
 * Use elitism and tournament selection.
 * Change move format from "( CODE DIRECTION )" to "( CODE . DIRECTION )"
 * Remove ST_STATIC_CHECK.
 * Move run status into CurrentState.
 * Shutdown Environment::Eval loop.
 * Set maximum number of steps.
 * Shutdown Individual::Execute loop.

Version 0.0.0.8 2010-12-05
 * Add support for current state.
 * Fix for better individuals.
 * Set maximum heap size to 196 blocks.
 * Refuse get Object from WeakObject.
 * Set maximum of object to calculate stack in Environment::Eval.
 * Add --enable-static to compile functions statically to avoid stack corruption.
 * Speedup output objects with setted width.
 * Set maximum stack depth in Environment::Eval.
 * Add test for infinity recursion.
 * Add Ackermann function for tests.
 * Use stack instead recursive check for equality.
 * More strong mutation.
 * Show more information about evolution.
 * Avoiding double individual.
 * Speedup comparing objects.
 * Dump objects for viewing them in gdb.

Version 0.0.0.7 2010-12-01
 * Make GP::CheckForParam more strict.
 * Add static check with ERROR in memory and world.
 * Fix IF with ERROR condition.
 * Fix bug with loading functions.